--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<div class="ui text container">
+	<h3 class="first headroom">Contact information</h3>
+	<p>
+		Here's where you can provide contact information.
+	</p>
+	{{nav-buttons sendChangeRoute="changeRoute" back="mapping" next="review"}}
+</div>
