add placeholder text

--- a/app/templates/data.hbs
+++ b/app/templates/data.hbs
@@ -19,8 +19,8 @@
 			</div>
 	    {{#if (eq selectedFormat "Download link (.zip, etc.)")}}
 				<div class="field">
-					<label type="text" placeholder="http://... .zip" autofocus=true>Paste the file URL</label>
-					<input>
+					<label type="text" autofocus=true>Paste the file URL</label>
+					<input placeholder="http://... .zip">
 				</div>
 			{{/if}}
 		</form>
