--- a/app/templates/license.hbs
+++ b/app/templates/license.hbs
@@ -3,10 +3,17 @@
 	<p>
 		Here's where you can add license information.
 	</p>
-	<div class="ui form segment {{if (eq licensePresent false) "error"}}">
-		<div class="ui error message">
+	<div class="ui form segment error">
+		{{#if (eq licensePresent false)}}
+			<div class="ui error message">
 		    <p>Please add license information to proceed</p>
 		  </div>
+		{{/if}}
+		{{#if providedAndSelectedLicense}}
+			<div class="ui error message">
+		    <p>Please provide a license OR choose from the list</p>
+		  </div>
+		{{/if}}
 		<div class="field">
 			<label>Select a pre-formatted License</label>
       {{#ui-dropdown class="selection" selected=selectedLicense onChange=(action "selectLicense") as | execture mapper|}}
@@ -23,16 +30,26 @@
 		</div>
     <div class="field">
     	<label>Copy/paste your own</label>
-    	{{input type="text" value=frequency placeholder="source name" autofocus=true}}
+    	{{input type="text" value=providedLicense placeholder="source name"}}
     </div>
-    {{#if selectedLicense}}
-    	<div class="field">
-				<div class="ui message">
-					<div class="header">License: {{selectedLicense.name}}</div>
-					<p>{{selectedLicense.text}}</p>
+   	{{#unless providedAndSelectedLicense}}
+	    {{#if selectedLicense}}
+	    	<div class="field">
+					<div class="ui message">
+						<div class="header">License: {{selectedLicense.name}}</div>
+						<p>{{selectedLicense.text}}</p>
+					</div>
 				</div>
-			</div>
-		{{/if}}
+			{{/if}}
+			{{#if providedLicense}}
+	    	<div class="field">
+					<div class="ui message">
+						<div class="header">License: user provided</div>
+						<p>{{providedLicense}}</p>
+					</div>
+				</div>
+			{{/if}}
+		{{/unless}}
 	</div>
 	{{nav-buttons sendChangeRoute="changeRoute" back="source" next="mapping"}}
 </div>
