maintainer contact info UI

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,7 +1,22 @@
 <div class="ui text container">
 	<h3 class="first headroom">Contact information</h3>
 	<p>
-		Here's where you can provide contact information.
+		Here's where you can provide contact information. (email address*, name)
 	</p>
+	<div class="ui equal width form {{if emailError "error"}}">
+	  <div class="fields">
+	    <div class="field">
+	      <label>Name</label>
+	      {{input type="text" value=name placeholder="name" autofocus=true}}
+	    </div>
+	    <div class="required field {{if emailError "error"}}">
+	      <label>Email address</label>
+	      {{input type="text" value=email placeholder="email address" autofocus=true}}
+	      <div class="ui error message">
+			    <p>Please add license information to proceed</p>
+			  </div>
+	    </div>
+	  </div>
+	</div>
 	{{nav-buttons sendChangeRoute="changeRoute" back="mapping" next="review"}}
 </div>
