--- a/app/templates/license.hbs
+++ b/app/templates/license.hbs
@@ -20,6 +20,9 @@
 				<div class="default text">Licenses</div>
 				<i class="dropdown icon"></i>
 				<div class="menu">
+				  <div class="item" data-value={{map-value mapper null}}>
+			      Licenses
+			    </div>
 					{{#each licenses as | license |}}
 				    <div class="item" data-value={{map-value mapper license}}>
 				      {{license.name}}
