--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -1,7 +1,7 @@
 <div class="ui text container">
-	<h3 class="first headroom">Add license</h3>
+	<h3 class="first headroom">Review</h3>
 	<p>
-		Here's where you can add license information.
+		Here's where you can review information before submitting.
 	</p>
 	{{nav-buttons sendChangeRoute="changeRoute" back="contact" next="success"}}
 </div>
