update to validation on license and source

--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -13,7 +13,7 @@
 	      <label>Email address</label>
 	      {{input type="text" value=email placeholder="email address" autofocus=true}}
 	      <div class="ui error message">
-			    <p>Please add license information to proceed</p>
+			    <p>Please provide an email address to proceed</p>
 			  </div>
 	    </div>
 	  </div>
