--- a/app/templates/source.hbs
+++ b/app/templates/source.hbs
@@ -3,14 +3,20 @@
 	<p>
 		Here's where you can add source information.
 	</p>
-	<div class="ui form segment error">
+	<div class="ui form segment {{if errorState "error"}}">
 		<div class="required field {{if sourceError "error"}}">
     	<label>Data Source</label>
     	{{input type="text" value=source placeholder="source name" autofocus=true}}
+    	<div class="ui error message">
+		    <p>Please provide the source to proceed</p>
+		  </div>
     </div>
     <div class="required field {{if frequencyError "error"}}">
     	<label>Update frequency</label>
-    	{{input type="text" value=frequency placeholder="source name" autofocus=true}}
+    	{{input type="text" value=frequency placeholder="frequency" autofocus=true}}
+    	<div class="ui error message">
+		    <p>Please provide the update frequency to proceed</p>
+		  </div>
     </div>
 	</div>
 	{{nav-buttons sendChangeRoute="changeRoute" back="data" next="license"}}
