--- a/app/templates/data.hbs
+++ b/app/templates/data.hbs
@@ -7,41 +7,50 @@
 		Here's where you can add data.
 	</p>
 
-	<form class="ui form segment">
-		<div class="required field">
-    	<label>Choose data format</label>
-    	<div class="ui error message">
-		    <p>Please add data to proceed</p>
-		  </div>
-			{{#ui-dropdown class="selection" selected=selectedFormat onChange=(action (mut selectedFormat)) as |execute mapper|}}
-				<div class="default text">Formats</div>
-			  <i class="dropdown icon"></i>
-			  <div class="menu">
-			    {{#each formats as |format|}}
-			      <div class="item" data-value="{{map-value mapper format}}">
-			        {{format}}
-			      </div>
-			    {{/each}}
+	{{#with (changeset model DataValidator) as |changeset|}}
+		<form class="ui form segment">
+			<div class="required field">
+	    	<label>Choose data format</label>
+	    	<div class="ui error message">
+			    <p>Please add data to proceed</p>
 			  </div>
-			{{/ui-dropdown}}
-		</div>
-    {{#if (eq selectedFormat "Download link (.zip, etc.)")}}
-			<div class="required field">
-				{{input type="text" value=data placeholder="http://... .zip" autofocus=true}}
+				{{#ui-dropdown class="selection" selected=selectedFormat onChange=(action (mut selectedFormat)) as |execute mapper|}}
+					<div class="default text">Formats</div>
+				  <i class="dropdown icon"></i>
+				  <div class="menu">
+				    {{#each formats as |format|}}
+				      <div class="item" data-value="{{ map-value mapper format}}">
+				        {{format}}
+				      </div>
+				    {{/each}}
+				  </div>
+				{{/ui-dropdown}}
 			</div>
-		{{/if}}
-		{{#if (eq selectedFormat "ArcGIS server link")}}
-			<div class="required field">
-				<label>Paste the ArcGIS server URL</label>
-				{{input type="text" placeholder="http://... .???" key-up="updateData"}}
-			</div>
-		{{/if}}
-		{{#if (eq selectedFormat "Direct upload")}}
-			<div class="required field">
-				<label >Add file</label>
-				<input type="file" id="upload" onChange={{action "uploadData"}}>
-			</div>
-		{{/if}}
-	</form>
-	{{nav-buttons sendChangeRoute="changeRoute" back="intro" next="source" proceed=proceed}}
+	    {{#if (eq selectedFormat "Download link (.zip, etc.)")}}
+				<div class="required field">
+					{{input type="text" placeholder="http://... .zip" autofocus=true}}
+				</div>
+			{{/if}}
+			{{#if (eq selectedFormat "ArcGIS server link")}}
+				<div class="required field">
+					<label>Paste the ArcGIS server URL</label>
+					{{input type="text" value=changeset.data_link changeset=changeset placeholder="http://... .???"}}
+				</div>
+				<ul>
+			  {{#each changeset.errors as |errorSet|}}
+			    {{#each errorSet.validation as |error|}}
+			      <li>{{error}}</li>
+			    {{/each}}
+			  {{/each}}
+			</ul>
+			{{/if}}
+			{{#if (eq selectedFormat "Direct upload")}}
+				<div class="required field">
+					<label >Add file</label>
+					<input type="file" id="upload" onChange={{action "uploadData"}}>
+				</div>
+			{{/if}}
+		</form>
+		{{nav-buttons sendChangeRoute="changeRoute" back="intro" next="source" changeset=changeset}}
+	{{/with}}
 </div>
