--- a/app/templates/components/validated-input.hbs
+++ b/app/templates/components/validated-input.hbs
@@ -2,8 +2,10 @@
 {{input type="text" value=(get changeset propertyName) changeset=changeset placeholder=placeholder }}
 <ul>
   {{#each changeset.errors as |errorSet|}}
-    {{#each errorSet.validation as |error|}}
-      <li>{{error}}</li>
-    {{/each}}
+    {{#if (eq errorSet.key propertyName)}}
+      {{#each errorSet.validation as |error|}}
+        <li>{{error}}</li>
+      {{/each}}
+    {{/if}}
   {{/each}}
 </ul>
