--- a/app/templates/components/validated-input.hbs
+++ b/app/templates/components/validated-input.hbs
@@ -1,11 +1,17 @@
-{{label}}
-{{input type="text" value=(get changeset propertyName) changeset=changeset placeholder=placeholder }}
-<ul>
-  {{#each changeset.errors as |errorSet|}}
-    {{#if (eq errorSet.key propertyName)}}
-      {{#each errorSet.validation as |error|}}
-        <li>{{error}}</li>
+<div class="{{if required "required"}} field ">
+  <label>{{label}}</label>
+  {{input type="text" value=(get changeset propertyName) changeset=changeset placeholder=placeholder }}
+</div>
+<div>
+  {{#if showErrorState}}
+    <ul class="list">
+      {{#each changeset.errors as |errorSet|}}
+        {{#if (eq errorSet.key propertyName)}}
+          {{#each errorSet.validation as |error|}}
+              <li>{{error}}</li>
+          {{/each}}
+        {{/if}}
       {{/each}}
-    {{/if}}
-  {{/each}}
-</ul>
+    </ul>
+  {{/if}}
+</div>
