--- a/app/templates/license.hbs
+++ b/app/templates/license.hbs
@@ -16,7 +16,7 @@
 		{{/if}}
 		<div class="field">
 			<label>Select a pre-formatted License</label>
-      {{#ui-dropdown class="selection" selected=selectedLicense onChange=(action "selectLicense") as | execture mapper|}}
+      {{#ui-dropdown class="selection" selected=selectedLicense onChange=(action "selectLicense") as | execute mapper|}}
 				<div class="default text">Licenses</div>
 				<i class="dropdown icon"></i>
 				<div class="menu">
