--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -3,18 +3,27 @@
 	<p>
 		The user will begin by searching to see if data exists in their country and region. If it does, they will enter "edit mode," with fields pre-populated with existing data.
 	</p>
-		{{#ui-search source=countries searchFields=country onSearchQuery=(action (mut query)) onSelect=(action "selectCountry")}}
-		<!-- this inline style is temporary and needs to be fixed -->
-		  <input class="prompt" style="width:300px;text-align:center" type="text" placeholder="Search existing countries">
-		  <div class="results"></div>
-		{{/ui-search}}
-	<!-- <div>
-		{{#if selectedCountry}}
-			{{#ui-search source=regions searchFields=country onSearchQuery=(action (mut query)) onSelect=(action "selectRegion")}}
-			  <input class="prompt" type="text" placeholder="Regions in {{selectedCountry.title}}">
-			  <div class="results"></div>
-			{{/ui-search}}
-		{{/if}}
-	</div> -->
+		{{#power-select
+      search=(action "searchCountries")
+      selected=country
+      placeholder="search for country"
+      onchange=(action (mut country))
+      as | countries |
+    }}
+      {{countries.attributes.name}}
+    {{/power-select}}
+    
+    {{#if country}}
+    	{{#power-select
+	      search=(action "searchRegions")
+	      selected=region
+	      placeholder=regionPlaceholder
+	      onchange=(action (mut region))
+	      as | regions |
+	    }}
+	      {{regions.attributes.name}}
+	    {{/power-select}}
+    {{/if}}
+
 	{{nav-buttons sendChangeRoute="changeRoute" next="data"}}
 </div>
