search for regions in fixture data by country code. Add country and region to submission record.

--- a/app/templates/intro.hbs
+++ b/app/templates/intro.hbs
@@ -21,9 +21,11 @@
 	      onchange=(action (mut region))
 	      as | regions |
 	    }}
-	      {{regions.attributes.name}}
+	      {{regions.name}}
 	    {{/power-select}}
     {{/if}}
+
+   
 
 	{{nav-buttons sendChangeRoute="changeRoute" next="data"}}
 </div>
