--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,8 +1,5 @@
 <div class="ui text container">
 	<h3 class="first headroom">Contact information</h3>
-	<p>
-		Here's where you can provide contact information. (email address*, name)
-	</p>
 	{{#with (changeset model MaintainerValidator) as |changeset|}}
 		<div class="ui grid">
 			<div class="eight wide column ui form">
@@ -24,6 +21,10 @@
 					</div>
 
 		</div>
-		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" changeset=changeset}}
+		{{#if model.edit_mode}}
+			<button class="ui button purple right floated" onClick={{action "returnToReview"}}><i class="checkmark icon"></i>Finished editing</button>
+		{{else}}
+			{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="mapping" next="review" changeset=changeset}}
+		{{/if}}		
 	{{/with}}
 </div>
