modify review template

--- a/app/templates/review.hbs
+++ b/app/templates/review.hbs
@@ -86,6 +86,5 @@
 			</tr>
 		</tbody>
 	</table>
-	<!-- {{nav-buttons sendChangeRoute="changeRoute" back="contact" next="success"}} -->
-	<button class="ui button green fluid" onClick={{action "submit"}}>Submit</button>
+	<button class="ui button green right floated" onClick={{action "submit"}}>Submit</button>
 </div>
