--- a/app/templates/source.hbs
+++ b/app/templates/source.hbs
@@ -24,11 +24,15 @@
 					showErrorState=showErrorState}}
 			</div>
 		</div>
-		{{nav-buttons
-			showError="showError"
-			sendChangeRoute="changeRoute"
-			back="data"
-			next="license"
-			changeset=changeset}}
+		{{#if model.edit_mode}}
+			<button class="ui button purple right floated" onClick={{action "returnToReview" changeset}}><i class="checkmark icon"></i>Finished editing</button>
+		{{else}}
+			{{nav-buttons
+				showError="showError"
+				sendChangeRoute="changeRoute"
+				back="data"
+				next="license"
+				changeset=changeset}}
+		{{/if}}
 	{{/with}}
 </div>
