can edit data info and return to preview

--- a/app/templates/source.hbs
+++ b/app/templates/source.hbs
@@ -25,7 +25,7 @@
 			</div>
 		</div>
 		{{#if model.edit_mode}}
-			<button class="ui button purple right floated" onClick={{action "returnToReview" changeset}}><i class="checkmark icon"></i>Finished editing</button>
+			<button class="ui button purple right floated" onClick={{action "changeRoute" "review" changeset}}><i class="checkmark icon"></i>Finished editing</button>
 		{{else}}
 			{{nav-buttons
 				showError="showError"
