--- a/app/templates/data.hbs
+++ b/app/templates/data.hbs
@@ -53,6 +53,10 @@
 				</div>
 			{{/if}}
 		</form>
-		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="intro" next="source" changeset=changeset}}
+		{{#if model.edit_mode}}
+			<button class="ui button purple right floated" onClick={{action "changeRoute" "review" changeset}}><i class="checkmark icon"></i>Finished editing</button>
+		{{else}}
+			{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="intro" next="source" changeset=changeset}}
+		{{/if}}
 	{{/with}}
 </div>
