--- a/app/templates/source.hbs
+++ b/app/templates/source.hbs
@@ -24,15 +24,6 @@
 					showErrorState=showErrorState}}
 			</div>
 		</div>
-		{{#if model.edit_mode}}
-			<button class="ui button purple right floated" onClick={{action "changeRoute" "review" changeset}}><i class="checkmark icon"></i>Finished editing</button>
-		{{else}}
-			{{nav-buttons
-				showError="showError"
-				sendChangeRoute="changeRoute"
-				back="data"
-				next="license"
-				changeset=changeset}}
-		{{/if}}
+		{{nav-buttons showError="showError" sendChangeRoute="changeRoute" back="data" next="license" changeset=changeset}}
 	{{/with}}
 </div>
